--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,23 +8,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: kivy/buildozer:latest  # 使用官方 Docker，已含 Android SDK/NDK/Ant
+
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-
-      - name: Install dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y python3-pip python3-setuptools python3-dev \
-              build-essential git zlib1g-dev libffi-dev \
-              libssl-dev libncurses5-dev libsqlite3-dev
-          pip install --upgrade pip setuptools cython
-          pip install buildozer
+      - name: Show Python version
+        run: python --version
 
       - name: Build APK
         run: |
           buildozer android debug
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
+        with:
+          name: MyApp-APK
+          path: ./bin/MyApp-0.1-debug.apk  # buildozer 生成的 APK 位置
