--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,8 @@ jobs:
 
       - name: Build APK
         run: |
-          buildozer android debug --no-root
+            export BUILDOZER_NO_ROOT=1
+            buildozer android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
