--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,7 @@ jobs:
 
       - name: Build APK
         run: |
-          export BUILDOZER_NO_ROOT=1
-          buildozer android debug
+          yes y|buildozer android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
