Update Android SDK setup in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,23 +29,21 @@ jobs:
           pip install --upgrade pip setuptools cython
           pip install buildozer
 
-      # 4️⃣ 自動下載並同意 Android SDK 授權
-      - name: Prepare Android SDK
+      # 4️⃣ 下載 Android SDK Command-line Tools
+      - name: Setup Android SDK
         run: |
           export ANDROID_HOME=$HOME/android-sdk
           mkdir -p $ANDROID_HOME/cmdline-tools
           cd $ANDROID_HOME/cmdline-tools
-          # 下載 Command Line Tools
           wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
           unzip cmdline-tools.zip
           rm cmdline-tools.zip
           mv cmdline-tools latest
           export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
-          # 接受授權
           yes | sdkmanager --licenses
           sdkmanager "platform-tools" "platforms;android-33" "build-tools;36.1.0"
 
-      # 5️⃣ 使用 Buildozer 打包
+      # 5️⃣ Build APK
       - name: Build APK
         run: |
           export ANDROIDSDK=$HOME/android-sdk
