--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,44 +9,46 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps:
-      # 1️⃣ 取得專案
-      - uses: actions/checkout@v3
+    env:
+      ANDROID_HOME: ${{ github.workspace }}/android-sdk
+      PATH: ${{ github.workspace }}/android-sdk/cmdline-tools/latest/bin:${{ github.workspace }}/android-sdk/platform-tools:$PATH
 
-      # 2️⃣ 安裝 Python
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      # 3️⃣ 安裝依賴
       - name: Install dependencies
         run: |
           sudo apt update
           sudo apt install -y python3-pip python3-setuptools python3-dev \
-              build-essential git zlib1g-dev libffi-dev \
-              libssl-dev libncurses5-dev libsqlite3-dev openjdk-17-jdk unzip wget
+              build-essential git zlib1g-dev libffi-dev libssl-dev \
+              libncurses5-dev libsqlite3-dev unzip wget
           pip install --upgrade pip setuptools cython
           pip install buildozer
 
-      # 4️⃣ 下載 Android SDK Command-line Tools
-      - name: Setup Android SDK
+      - name: Install Android SDK Command-line Tools
         run: |
-          export ANDROID_HOME=$HOME/android-sdk
           mkdir -p $ANDROID_HOME/cmdline-tools
           cd $ANDROID_HOME/cmdline-tools
           wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
           unzip cmdline-tools.zip
           rm cmdline-tools.zip
           mv cmdline-tools latest
+
+          # 設定 PATH
           export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
+
+          # 同意所有授權
           yes | sdkmanager --licenses
+
+          # 安裝必要套件
           sdkmanager "platform-tools" "platforms;android-33" "build-tools;36.1.0"
 
-      # 5️⃣ Build APK
       - name: Build APK
         run: |
-          export ANDROIDSDK=$HOME/android-sdk
-          export ANDROIDNDK=$HOME/android-ndk
-          export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
           buildozer android debug --verbose
