--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,46 +9,35 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    env:
-      ANDROID_HOME: ${{ github.workspace }}/android-sdk
-      PATH: ${{ github.workspace }}/android-sdk/cmdline-tools/latest/bin:${{ github.workspace }}/android-sdk/platform-tools:$PATH
-
     steps:
-      - name: Checkout repo
+      # 1️⃣ 安裝系統工具
+      - name: Install system utilities
+        run: |
+          sudo apt update
+          sudo apt install -y tar unzip wget curl git python3-pip python3-setuptools python3-dev build-essential openjdk-17-jdk
+
+      # 2️⃣ Checkout 你的 repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 3️⃣ 安裝 Python 套件
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install Buildozer
         run: |
-          sudo apt update
-          sudo apt install -y python3-pip python3-setuptools python3-dev \
-              build-essential git zlib1g-dev libffi-dev libssl-dev \
-              libncurses5-dev libsqlite3-dev unzip wget
-          pip install --upgrade pip setuptools cython
+          python -m pip install --upgrade pip setuptools cython
           pip install buildozer
 
-      - name: Install Android SDK Command-line Tools
+      # 4️⃣ 同意 Android SDK 授權
+      - name: Accept Android SDK Licenses
         run: |
-          mkdir -p $ANDROID_HOME/cmdline-tools
-          cd $ANDROID_HOME/cmdline-tools
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip
-          rm cmdline-tools.zip
-          mv cmdline-tools latest
+          mkdir -p $HOME/.android
+          yes | sdkmanager --licenses || true
 
-          # 設定 PATH
-          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
-
-          # 同意所有授權
-          yes | sdkmanager --licenses
-
-          # 安裝必要套件
-          sdkmanager "platform-tools" "platforms;android-33" "build-tools;36.1.0"
-
+      # 5️⃣ Build APK
       - name: Build APK
         run: |
-          buildozer android debug --verbose
+          buildozer android debug
