--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,35 +4,49 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ 取得專案程式碼
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install system tools
+      # 2️⃣ 安裝 Python
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
+      # 3️⃣ 安裝系統依賴
+      - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install -y tar unzip wget openjdk-17-jdk git python3-pip python3-setuptools python3-dev build-essential zlib1g-dev libffi-dev libssl-dev libncurses5-dev libsqlite3-dev
+          sudo apt install -y python3-pip python3-setuptools python3-dev \
+              build-essential git zlib1g-dev libffi-dev libssl-dev \
+              libncurses5-dev libsqlite3-dev unzip wget tar
+          pip install --upgrade pip setuptools cython
+          pip install buildozer
 
-      - name: Install Python dependencies
-        run: |
-          python3 -m pip install --upgrade pip setuptools cython
-          python3 -m pip install --user buildozer
+      # 4️⃣ 建立 Buildozer Android SDK 路徑
+      - name: Prepare Android SDK
+        run: mkdir -p $HOME/.buildozer/android/platform/android-sdk
 
-      - name: Set Buildozer environment
-        run: |
-          echo "export BUILDOZER_NO_ROOT=1" >> $GITHUB_ENV
-          echo "export PATH=$HOME/.local/bin:$PATH" >> $GITHUB_ENV
-
-      # ✅ 自動接受 SDK 授權
-      - name: Accept Android SDK licenses
-        run: |
-          yes | $HOME/.local/bin/buildozer android update sdk
-
+      # 5️⃣ 建 APK（自動同意授權，避免 root 問題）
       - name: Build APK
-        run: |
-          python3 -m buildozer android debug
+        env:
+          ANDROID_HOME: ${{ github.workspace }}/.buildozer/android/platform/android-sdk
+          ANDROID_SDK_ROOT: ${{ github.workspace }}/.buildozer/android/platform/android-sdk
+          ACCEPT_ANDROID_LICENSES: "y"
+          BUILDOZER_NO_ROOT: "1"
+        run: buildozer android debug --verbose --no-root
+
+      # 6️⃣ 上傳 APK 作為 artifact
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: myapp-apk
+          path: ./.buildozer/android/platform/build/dists/Myapp/bin/*.apk
