--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,12 +34,12 @@ jobs:
       - name: Setup Android SDK & NDK
         uses: android-actions/setup-android@v3
         with:
-          sdk-version: "33.0.0"          # 你可以改成你想的 API 等級
-          ndk-version: "25.2.9519653"   # Buildozer 推薦版本
-          accept-android-sdk-licenses: true
+          yes|sdk-version: "33.0.0"          # 你可以改成你想的 API 等級
+          yes|ndk-version: "25.2.9519653"   # Buildozer 推薦版本
+          yes|accept-android-sdk-licenses: true
 
       # 5️⃣ 打包 APK
       - name: Build APK
         run: |
-          export ANDROIDSDK_ROOT=$ANDROID_HOME
-          buildozer android debug
+          yes|export ANDROIDSDK_ROOT=$ANDROID_HOME
+          yes|buildozer android debug
