--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,42 +4,55 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      ANDROID_HOME: /usr/local/lib/android/sdk
+      ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
+      ANDROID_NDK_HOME: /usr/local/lib/android/sdk/ndk/25.2.9519653
+      ACCEPT_EULA: Y
+      BUILDOZER_NO_ROOT: 1  # 避免 Buildozer 卡住 root 警告
+
     steps:
-      # 1️⃣ 取得原始碼
-      - name: Checkout code
+      # 1️⃣ 取得程式碼
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ 安裝 Python
-      - name: Setup Python
+      # 2️⃣ 安裝 Python 與 Buildozer
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      # 3️⃣ 安裝依賴
-      - name: Install dependencies
+      - name: Install Buildozer dependencies
         run: |
           sudo apt update
           sudo apt install -y python3-pip python3-setuptools python3-dev \
               build-essential git zlib1g-dev libffi-dev \
-              libssl-dev libncurses5-dev libsqlite3-dev unzip wget
+              libssl-dev libncurses5-dev libsqlite3-dev unzip
           pip install --upgrade pip setuptools cython
           pip install buildozer
 
-      # 4️⃣ 安裝 Android SDK / NDK 並接受授權
+      # 3️⃣ 安裝 Android SDK/NDK & Build-tools
       - name: Setup Android SDK & NDK
         uses: android-actions/setup-android@v3
         with:
-          yes|sdk-version: "33.0.0"          # 你可以改成你想的 API 等級
-          yes|ndk-version: "25.2.9519653"   # Buildozer 推薦版本
-          yes|accept-android-sdk-licenses: true
+          sdk-version: "33.0.0"
+          ndk-version: "25.2.9519653"
+          accept-android-sdk-licenses: true
 
-      # 5️⃣ 打包 APK
+      # 4️⃣ Build APK
       - name: Build APK
         run: |
-          yes|export ANDROIDSDK_ROOT=$ANDROID_HOME
-          yes|buildozer android debug
+          buildozer android debug
+
+      # 5️⃣ 上傳產出的 APK
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: myapp-apk
+          path: .buildozer/android/platform/build/dists/**/*.apk
