--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,11 +32,11 @@ jobs:
         with:
           sdk-version: "34"
           ndk-version: "25.2.9519653"
-          accept-android-sdk-licenses: true
+          yes|accept-android-sdk-licenses: true
 
       - name: Build APK
         run: |
-          buildozer android debug
+          yes|buildozer android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
