Refactor build.yml for APK build process
Updated the GitHub Actions workflow for building APKs, including environment variable setup, Python version upgrade, and dependency installation improvements.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,50 +2,57 @@ name: Build APK
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v4
+    env:
+      ANDROID_HOME: /usr/local/lib/android/sdk
+      ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
+      ANDROID_NDK_HOME: /usr/local/lib/android/sdk/ndk/25.2.9519653
+      ACCEPT_EULA: Y
+      BUILDOZER_NO_ROOT: 1  # 避免 Buildozer 卡住 root 警告
 
-      - name: Setup Python 3.10
+    steps:
+      # 1️⃣ 取得程式碼
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # 2️⃣ 安裝 Python 與 Buildozer
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.11"
 
-      - name: Install system deps
+      - name: Install Buildozer dependencies
         run: |
           sudo apt update
-          sudo apt install -y \
-            openjdk-17-jdk \
-            unzip zip git \
-            build-essential \
-            libffi-dev libssl-dev
-          pip install --upgrade pip
-          pip install cython buildozer
+          sudo apt install -y python3-pip python3-setuptools python3-dev \
+              build-essential git zlib1g-dev libffi-dev \
+              libssl-dev libncurses5-dev libsqlite3-dev unzip
+          pip install --upgrade pip setuptools cython
+          pip install buildozer
 
-      - name: Setup Android SDK & NDK r25b
+      # 3️⃣ 安裝 Android SDK/NDK & Build-tools
+      - name: Setup Android SDK & NDK
         uses: android-actions/setup-android@v3
         with:
-          api-level: 31
-          ndk-version: 25.2.9519653
+          sdk-version: "33.0.0"
+          ndk-version: "25.2.9519653"
           accept-android-sdk-licenses: true
 
-      - name: Force NDK for buildozer
-        run: |
-          echo "ANDROIDNDK=$ANDROID_NDK_HOME" >> $GITHUB_ENV
-          echo "ANDROIDSDK=$ANDROID_SDK_ROOT" >> $GITHUB_ENV
-
+      # 4️⃣ Build APK
       - name: Build APK
         run: |
-          buildozer -v android debug
+          buildozer android debug
 
+      # 5️⃣ 上傳產出的 APK
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: MyApp-APK
-          path: .buildozer/android/platform/build/dists/**/bin/*.apk
+          name: myapp-apk
+          path: .buildozer/android/platform/build/dists/**/*.apk
