--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,25 +4,32 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     container:
-      image: kivy/buildozer:latest  # 使用官方 Docker，已含 Android SDK/NDK/Ant
+      image: kivy/buildozer:latest
+      options: --workdir /github/workspace
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Show files (debug)
+        run: ls -la
 
       - name: Show Python version
         run: python --version
 
       - name: Build APK
         run: |
-          yes|buildozer android debug
+          buildozer android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: MyApp-APK
-          path: ./bin/MyApp-0.1-debug.apk  # buildozer 生成的 APK 位置
+          path: .buildozer/android/platform/build/dists/*/bin/*.apk
