--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,14 +19,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Show files (debug)
-        run: ls -la
-
-      - name: Show Python version
-        run: python --version
+        run: |
+          ls -R .
 
       - name: Build APK
         run: |
-          yes|buildozer android debug
+          buildozer android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
