--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,13 +18,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Show files (debug)
-        run: |
-          ls -R .
+      - name: Show root files (debug)
+        run: ls -la
+
+      - name: Show recursive (debug)
+        run: ls -R .
 
       - name: Build APK
         run: |
-          yes y|buildozer android debug
+          buildozer android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
